--- a/configs/ViTAEv2_S/rumsey/rumsey_finetune.yaml
+++ b/configs/ViTAEv2_S/rumsey/rumsey_finetune.yaml
@@ -2,8 +2,7 @@ _BASE_: "../Base_det.yaml"
 
 MODEL:
   # WEIGHTS: "weights/vitaev2-s_pretrain_synth-tt-mlt-13-15-textocr.pth"
-  WEIGHTS: "weights/map/frozen_pretrain_40k.pth"
-  # WEIGHTS: "output/vitaev2/finetune/a40_rumsey_bs2_aug_final_final/model_0002999.pth"
+  WEIGHTS: "weights/map/frozen_pretrain_40k.pth"  #  # put weights here
   TRANSFORMER:
     FROZEN: False
 
@@ -13,7 +12,7 @@ DATASETS:
   TEST: ("rumsey_val_148voc",)
 
 SOLVER:
-  IMS_PER_BATCH: 4
+  IMS_PER_BATCH: 2
   BASE_LR: 1e-4
   LR_BACKBONE: 1e-5
   WARMUP_ITERS: 0
@@ -27,10 +26,10 @@ SOLVER:
 #   MIN_SIZE_TEST: 1440
 #   MAX_SIZE_TEST: 2000
 INPUT:
-  MIN_SIZE_TRAIN: (1300, 1400, 1500, 1600, 1700, 1800, 1900, 2000)  # 保持尺寸多样性,才能有个好结果
-  MAX_SIZE_TRAIN: 2300
-  MIN_SIZE_TEST: 2000   # 测试时保持原始尺寸
-  MAX_SIZE_TEST: 4000   # 保持一致，避免不必要的放大
+  MIN_SIZE_TRAIN: (1300, 1400, 1500, 1600, 1700, 1800, 1900, 2000)  
+  MAX_SIZE_TRAIN: 2400
+  MIN_SIZE_TEST: 2000   
+  MAX_SIZE_TEST: 4000  
   CROP:
     ENABLED: True
   ROTATE: True
@@ -39,7 +38,4 @@ TEST:
   EVAL_PERIOD: 1000
   LEXICON_TYPE: None
 
-OUTPUT_DIR:  "output/vitaev2/rumsey/finetune/a40_rumsey_bs4"
-# OUTPUT_DIR:  "output/vitaev2/finetune/rumsey_bs4_pretrain120k"
-
-# CUDA_VISIBLE_DEVICES=0,1 python tools/train_net.py --config-file configs/ViTAEv2_S/rumsey/rumsey_finetune.yaml --num-gpus 2 --dist-url tcp://127.0.0.1:50131
+OUTPUT_DIR:  "output/vitaev2/rumsey/finetune/rumsey"
